# firmware-mastery

./: .gitignore  CMakeLists.txt  README.md
01_Architecture_and_Foundations/: CMakeLists.txt  bit_manipulation.c  bit_manipulation.h  practice_01_bit_math.c  practice_01_bit_math.h
02_Core_Peripherals/: CMakeLists.txt  practice_01_gpio_basics.c  practice_01_gpio_basics.h
03_Communication_Protocols/: CMakeLists.txt  README.md  i2c_driver.c  i2c_driver.h  practice_01_uart_basics.c  practice_01_uart_basics.h  practice_02_i2c_advanced.c  practice_02_i2c_advanced.h
04_RTOS_and_Concurrency/: CMakeLists.txt  practice_01_rtos_tasks.c  practice_01_rtos_tasks.h
05_Advanced_System_Engineering/: CMakeLists.txt  practice_01_bootloader.c  practice_01_bootloader.h
06_Professional_Debugging_and_Validation/: CMakeLists.txt  inline_debugging_guide.md  practice_01_hardfaults.c  practice_01_hardfaults.h
07_Advanced_Hardware/: CMakeLists.txt  practice_01_interrupts_nvic.c  practice_01_interrupts_nvic.h  practice_02_timers_pwm.c  practice_02_timers_pwm.h  practice_03_dma.c  practice_03_dma.h  practice_04_analog_adc.c  practice_04_analog_adc.h  practice_05_low_power.c  practice_05_low_power.h
